Performance: defer shader, lazy load GIFs, ultra-compress mobile video

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <title>NainTor | The Second Brain</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" as="style"
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Share+Tech+Mono&display=swap">
   <link
     href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Share+Tech+Mono&display=swap"
     rel="stylesheet">
@@ -142,7 +144,8 @@
             <p>Starts recording the moment a meeting begins.</p>
           </div>
           <div class="feature-demo">
-            <img src="https://i.ibb.co/Q3WRXRjP/FINAL-GIF-4.gif" alt="Auto Meeting Detection Demo" class="feature-gif">
+            <img src="https://i.ibb.co/Q3WRXRjP/FINAL-GIF-4.gif" alt="Auto Meeting Detection Demo" class="feature-gif"
+              loading="lazy">
           </div>
         </div>
         <div class="feature-item">
@@ -161,7 +164,8 @@
             <p>Summaries delivered instantly post-talk.</p>
           </div>
           <div class="feature-demo">
-            <img src="https://i.ibb.co/R4SJzT7f/FINAL-GIF-2-1-1-1.gif" alt="AI Minutes Demo" class="feature-gif">
+            <img src="https://i.ibb.co/R4SJzT7f/FINAL-GIF-2-1-1-1.gif" alt="AI Minutes Demo" class="feature-gif"
+              loading="lazy">
           </div>
         </div>
         <div class="feature-item">
@@ -181,7 +185,8 @@
             <p>Never forget a name or a face again.</p>
           </div>
           <div class="feature-demo">
-            <img src="https://i.ibb.co/k6wfZ5Md/GIF-4-FINAL-1.gif" alt="Face Memory Demo" class="feature-gif">
+            <img src="https://i.ibb.co/k6wfZ5Md/GIF-4-FINAL-1.gif" alt="Face Memory Demo" class="feature-gif"
+              loading="lazy">
           </div>
         </div>
         <div class="feature-item">
@@ -197,7 +202,8 @@
             <p>Instantly retrieve any specific moment or detail.</p>
           </div>
           <div class="feature-demo">
-            <img src="https://i.ibb.co/prGNfGWc/FINAL-MONA-LISA-GIF.gif" alt="Smart Search Demo" class="feature-gif">
+            <img src="https://i.ibb.co/prGNfGWc/FINAL-MONA-LISA-GIF.gif" alt="Smart Search Demo" class="feature-gif"
+              loading="lazy">
           </div>
         </div>
       </div>
